--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   },
   "scripts": {
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run --record --key 577245cf-d37a-4081-9195-6535a13a48ce"
   }
 }
